# promoteme

./: .gitignore  CLAUDE.md  Cargo.toml  EXAMPLES.md  GEMINI.md  PROMPT.txt  README.md  devitrine.sh
.claude/: settings.local.json
docs/superpowers/specs/: 2026-03-29-hireme-interview-tracking-design.md
lentium-io/2026_03_29_14_06/: README.md  RaphaTavares.md  SCORES.md  filipejesse.md  flaviobarci.md  g4rcez.md  rwspatin.md
src/: ai.rs  azuredevops.rs  cli.rs  config.rs  github.rs  interview.rs  interview_prompt.txt  main.rs  models.rs  notes.rs  processor.rs  progression_prompt.txt  prompt.txt  provider.rs  team.rs
