[package]
name = "promoteme"
version = "0.1.1"
edition = "2024"
description = "CLI tool that generates brag documents from your contributions"
license = "MIT"
repository = "https://github.com/g4rcez/promoteme"
keywords = ["cli", "github", "brag-document", "performance-review"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rayon = "1.8"
indicatif = "0.17"

